src/test/deca/context/valid/LE/protectedWithGet.deca
// Historique:
//    cree le 19/01/2022


class B {
    protected int y =15;
    int gety(){
        return this.y;
    }
}
    
    
class A {
    int x;

    int ajoute(int x, B b){
        return x+b.gety();
    }
}
