src/test/deca/context/invalid/LE/protectedField.deca
// Historique:
//    cree le 19/01/2022


class B {
    protected int y;
}
    
    
class A {
    int x;

    int ajoute(int x, B b){
        return x+b.y;
    }
}
